--- a/responsive/404-not-found-challenge.byStephenRanaud/index.html
+++ b/responsive/404-not-found-challenge.byStephenRanaud/index.html
@@ -27,11 +27,10 @@
             </button>
         </section>
         <footer id="footer-404">
-            <div class="by-user">
-                created by username - devChallenges.io
+            <div id="by-user">
+                <span> created by <a href="https://devchallenges.io/portfolio/stephenranaud">Stephen_Dev</a> - devChallenges.io</span>
             </div>
         </footer>
     </main>
 </body>
-
 </html>
