--- a/responsive/my-team-page.byStephenRanaud/index.html
+++ b/responsive/my-team-page.byStephenRanaud/index.html
@@ -60,7 +60,8 @@
             </div>
         </div>
     </div>
-    <span> created by <a href="https://devchallenges.io/portfolio/sairuss7">sairuss7</a> - devChallenges.io</span>
+   <div id="by-user">
+    <span> created by <a href="https://devchallenges.io/portfolio/stephenranaud">Stephen_Dev</a> - devChallenges.io</span>
+   </div>
 </body>
-
 </html>
